// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentProfileDetails renders correctly for authenticated agent 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-nameAndAvatarContainer"
  >
    <div
      class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
    >
      <span
        class="PodBrowser-icon-user-lock"
        style="font-size: 0.875rem; display: flex; width: 1.875rem; height: 1.875rem; align-items: center; justify-content: center; color: rgb(76, 175, 80); background-color: rgb(237, 247, 237); border-radius: 50%;"
      />
    </div>
    <p
      class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
      data-testid="agent-web-id"
    >
      Anyone signed in
    </p>
    <button
      class="PodBrowser-button"
      data-testid="menu-button"
      type="button"
    >
      <i
        class="PodBrowser-icon-more"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`AgentProfileDetails renders correctly for public agent 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-nameAndAvatarContainer"
  >
    <div
      class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
    >
      <span
        class="PodBrowser-icon-globe"
        style="font-size: 0.875rem; display: flex; width: 1.875rem; height: 1.875rem; align-items: center; justify-content: center; color: rgb(33, 150, 243); background-color: rgb(232, 244, 253); border-radius: 50%;"
      />
    </div>
    <p
      class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
      data-testid="agent-web-id"
    >
      Anyone
    </p>
    <button
      class="PodBrowser-button"
      data-testid="menu-button"
      type="button"
    >
      <i
        class="PodBrowser-icon-more"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`AgentProfileDetails renders without error 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-nameAndAvatarContainer"
  >
    <div
      class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
    >
      <span
        class="PodBrowser-icon-user"
        style="color: rgb(255, 255, 255);"
      />
    </div>
    <p
      class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
      data-testid="agent-web-id"
    >
      Example Agent
    </p>
    <button
      class="PodBrowser-button"
      data-testid="menu-button"
      type="button"
    >
      <i
        class="PodBrowser-icon-more"
      />
    </button>
  </div>
</DocumentFragment>
`;
